--- a/src/app/Components/monitorear-usuarios/monitorear-usuarios.component.html
+++ b/src/app/Components/monitorear-usuarios/monitorear-usuarios.component.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="header">
-    <h2>Monitorear Usuarios</h2>
+    <h2>Gestionar Usuarios</h2>
     <div class="actions">
       <button class="btn-export" (click)="exportarCSV()">
         <i class="fas fa-file-export"></i> Exportar CSV
