--- a/src/app/pages/administrar-usuarios/administrar-usuarios.component.html
+++ b/src/app/pages/administrar-usuarios/administrar-usuarios.component.html
@@ -41,11 +41,11 @@
     </div>
 
     <div class="row g-4">
-      <!-- Monitorear Usuarios -->
-      <div class="col-lg-6">
+      <!-- Gestionar Usuarios -->
+      <div class="col-lg-4">
         <div class="card action-card h-100">
           <div class="card-body d-flex flex-column">
-            <h4 class="card-title">Monitorear Usuarios</h4>
+            <h4 class="card-title">Gestionar Usuarios</h4>
             <ul class="feature-list flex-grow-1">
               <li>Lista de usuarios conectados</li>
               <li>Información de IP y hora</li>
@@ -58,8 +58,25 @@
         </div>
       </div>
 
+      <!-- Asignar Referencia -->
+      <div class="col-lg-4">
+        <div class="card action-card h-100">
+          <div class="card-body d-flex flex-column">
+            <h4 class="card-title">Referencias</h4>
+            <ul class="feature-list flex-grow-1">
+              <li>Lista de referencias</li>
+              <li>Crear nuevas referencias</li>
+              <li>Asignar usuarios y corresponsales</li>
+            </ul>
+            <button class="btn btn-action w-100" (click)="irGestionarReferencias()">
+              Gestionar <i class="fas fa-arrow-right ms-2"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+
       <!-- Gestionar Roles -->
-      <div class="col-lg-6">
+      <div class="col-lg-4">
         <div class="card action-card h-100">
           <div class="card-body d-flex flex-column">
             <h4 class="card-title">Gestionar Roles</h4>
