--- a/src/app/Components/tool-bar/tool-bar.component.html
+++ b/src/app/Components/tool-bar/tool-bar.component.html
@@ -29,16 +29,16 @@
         <i class="fas fa-user-circle"></i> Mi perfil
       </a>
     </li>
-    <li>
-      <a class="nav-link" 
-         [class.active]="currentActiveItem === 'administrar-usuarios'" 
+    <li *ngIf="isAdmin()">
+      <a class="nav-link"
+         [class.active]="currentActiveItem === 'administrar-usuarios'"
          (click)="navigateTo('administrar-usuarios', $event)">
         <i class="fas fa-users-cog"></i> Administrar Usuarios
       </a>
     </li>
-    <li>
-      <a class="nav-link" 
-         [class.active]="currentActiveItem === 'administrar-sistema'" 
+    <li *ngIf="isAdmin()">
+      <a class="nav-link"
+         [class.active]="currentActiveItem === 'administrar-sistema'"
          (click)="navigateTo('administrar-sistema', $event)">
         <i class="fas fa-cogs"></i> Administrar Sistema
       </a>
